//package protobuf;
//здесь забыто име пакета
syntax = "proto3";

service KeyWordMessaging {
    // немного некорректный синтаксис прото файла
    rpc SetKeyWord(KeyWordReq) returns (RedisKeyResp);
}

message KeyWordReq {
    string word = 1;
}

message RedisKeyResp {
    string redisKey = 1;
}